--- a/src/components/SideBar.scss
+++ b/src/components/SideBar.scss
@@ -18,3 +18,21 @@
   background-color: $black !important;
   text-transform: none !important;
 }
+
+.profile img {
+  border-radius: 50%;
+  width: 180px;
+  padding: 12px 0px;
+}
+
+.profile h1 {
+  font-size: 26px;
+}
+
+.profile p {
+  font-size: 15px;
+}
+
+.social-link {
+  margin: 16px 0;
+}
