--- a/src/components/MainColumn.scss
+++ b/src/components/MainColumn.scss
@@ -49,21 +49,66 @@
   margin-bottom: 8px;
 }
 
-.skill-sets .icon img {
+.app-icon {
   width: 36px;
   height: 36px;
   margin-right: 8px;
 }
 
-.skill-sets .skill-each-set {
+.skill-sets .four-elements {
   float: left;
   display: block;
   width: 23%;
   margin: 2% 2% 2% 0%;
 }
 
-.my-values li {
-  width: 31%;
+.my-values .three-elements,
+.portfolios .three-elements {
+  width: 30%;
   float: left;
-  margin: 4% 2% 4% 0;
+  margin: 3% 3% 3% 0;
+}
+
+.portfolios h3 {
+  margin-bottom: 12px;
+}
+
+.portfolios .portfolio-thumbnail {
+  width: 100%;
+}
+
+.portfolios .icons-ul li {
+  display: inline-block;
+}
+
+.portfolios .card {
+  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
+  transition: 0.3s;
+  cursor: pointer;
+  border-radius: 5px;
+  position: relative;
+}
+
+.portfolios .card:hover {
+  transform: scale(1.05);
+}
+
+.portfolio-description {
+  margin: 4%;
+}
+
+.view-more {
+  text-align: right;
+  padding: 12px 12px 4px 12px;
+}
+
+.view-more a:after {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 3;
+  pointer-events: auto;
+  content: "";
 }
