--- a/src/index.scss
+++ b/src/index.scss
@@ -157,6 +157,12 @@ p {
   overflow: hidden;
 }
 
+footer {
+  text-align: center;
+  padding: 8px;
+  font-size: 14px;
+}
+
 .container {
   overflow: hidden;
   margin: 24px;
