--- a/src/components/SideBar/MenuListItem.scss
+++ b/src/components/SideBar/MenuListItem.scss
@@ -1,5 +1,9 @@
 @import "../../Model.scss";
 
+.headline-link {
+  color: #fff !important;
+}
+
 .headline .headline-list-item {
   padding: 8px 48px !important;
 }
