--- a/src/components/PortfolioPage/PortfolioPage.scss
+++ b/src/components/PortfolioPage/PortfolioPage.scss
@@ -4,6 +4,10 @@
   text-align: center;
 }
 
+.portfolio--detail-container img {
+  width: 100%;
+}
+
 .portfolio--detail-container h3 {
   font-size: 23px;
   font-weight: 400;
