--- a/src/components/TopPage/TopPage.scss
+++ b/src/components/TopPage/TopPage.scss
@@ -17,6 +17,11 @@
   margin: 2% 2% 2% 0%;
 }
 
+.app-big-icon svg {
+  width: 40px;
+  height: 40px;
+}
+
 #my-values .three-elements,
 #portfolios .three-elements {
   width: 30%;
