Design smart phone and tablet site

--- a/src/components/PortfolioPage/PortfolioPage.scss
+++ b/src/components/PortfolioPage/PortfolioPage.scss
@@ -37,3 +37,9 @@
 .google-play-badge {
   width: 200px;
 }
+
+@media screen and (max-width: 781px) {
+  .portfolio-links li {
+    width: 100%;
+  }
+}
