--- a/src/components/TopPage/TopPage.scss
+++ b/src/components/TopPage/TopPage.scss
@@ -72,3 +72,11 @@
   pointer-events: auto;
   content: "";
 }
+
+@media screen and (max-width: 781px) {
+  #skill-sets .four-elements,
+  #my-values .three-elements,
+  #portfolios .three-elements {
+    width: 100%;
+  }
+}
