style: make sidebar stickly

--- a/src/index.scss
+++ b/src/index.scss
@@ -154,7 +154,6 @@ p {
 
 #root {
   background-color: #ececec;
-  overflow: hidden;
 }
 
 footer {
@@ -164,11 +163,10 @@ footer {
 }
 
 .container {
-  overflow: hidden;
-  margin: 24px;
-  background-color: $siteColor;
-  box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 3px 1px -2px rgba(0, 0, 0, 0.2), 0 1px 5px 0 rgba(0, 0, 0, 0.12);
-  border-radius: 8px;
+  display: flex;
+  width: calc(100% - (#{$frameSpace} * 2 ) );
+  margin: auto;
+  margin-bottom: $frameSpace;
 }
 
 h1 {
@@ -177,15 +175,24 @@ h1 {
 
 .main-column {
   width: 83%;
-  float: right;
   background: #fff;
-  min-height: 750px;
+  height: calc(100vh + #{$frameSpace});
+  overflow: scroll;
+  position: relative;
+  top: $frameSpace;
+  padding-bottom: $frameSpace;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  h2 {
+    font-size: 28px;
+    border-left: 4px solid $siteColor;
+    padding-left: 8px;
+  }
 }
 
-.main-column h2 {
-  font-size: 28px;
-  border-left: 4px solid $siteColor;
-  padding-left: 8px;
+.main-column::-webkit-scrollbar {
+  display: none;
 }
 
 .black-btn {
@@ -196,12 +203,10 @@ h1 {
 
 .summary-description {
   width: 60%;
-  float: left;
 }
 
 .summary-image {
   width: 40%;
-  float: left;
 }
 
 .summary-image {
@@ -212,13 +217,13 @@ h1 {
   max-width: 75%;
 }
 
-.icon li {
-  display: inline-block;
-}
-
 .icon {
   display: inline-block;
   margin-bottom: 8px;
+
+  li {
+    display: inline-block;
+  }
 }
 
 .app-icon {
@@ -228,8 +233,7 @@ h1 {
 }
 
 .block {
-  padding: 4% 6%;
-  overflow: hidden;
+  padding: 3% 6%;
 }
 
 .center {
@@ -241,8 +245,13 @@ h1 {
 }
 
 @media screen and (max-width: 781px) {
-  .main-column {
+  .container, .main-column {
     width: 100%;
+  }
+
+  .main-column {
+    top: 0;
+    height: auto;
   }
 
   .summary-description,
