--- a/src/components/SideBar/SideBar.scss
+++ b/src/components/SideBar/SideBar.scss
@@ -2,11 +2,17 @@
 
 .side-bar {
   width: 15%;
-  float: left;
   color: $white;
-  text-align: center;
   padding: 12px 1%;
+  background-color: $siteColor;
+  height: 100vh;
+  border-top-left-radius: 8px;
+  border-bottom-left-radius: 8px;
+  position: sticky;
+  top: 0;
+  margin-top: $frameSpace;
 }
+
 .side-bar .divider {
   margin: 24px 0 8px !important;
 }
@@ -32,6 +38,6 @@
 
 @media screen and (max-width: 781px) {
   .side-bar {
-    width: 100%;
+    display: none;
   }
 }
