--- a/src/components/TopPage/TopPage.scss
+++ b/src/components/TopPage/TopPage.scss
@@ -1,17 +1,27 @@
 @import "../../Model.scss";
 
 #about-me {
-  overflow: hidden;
+  display: flex;
+  flex-wrap: wrap;
+  h3 {
+    font-size: 23px;
+    font-weight: 400;
+    margin: 12px 0;
+  }
 }
 
-#about-me h3 {
-  font-size: 23px;
-  font-weight: 400;
-  margin: 12px 0;
+#externalLinks {
+  display: flex;
+  align-items: center;
+  gap: 24px;
+  flex-direction: row;
+}
+
+#skill-sets ul, #my-values ul, #portfolios ul {
+  display: flex;
 }
 
 #skill-sets .four-elements {
-  float: left;
   display: block;
   width: 23%;
   margin: 2% 2% 2% 0%;
@@ -25,7 +35,6 @@
 #my-values .three-elements,
 #portfolios .three-elements {
   width: 30%;
-  float: left;
   margin: 3% 3% 3% 0;
 }
 
@@ -78,5 +87,24 @@
   #my-values .three-elements,
   #portfolios .three-elements {
     width: 100%;
+  }
+
+  #about-me {
+    flex-wrap: wrap-reverse;
+    gap: 32px;
+  }
+
+  #externalLinks {
+    gap: 0px;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+
+  #skill-sets ul, #my-values ul, #portfolios ul {
+    flex-direction: column;
+  }
+
+  #skill-sets ul.icon, #portfolios .portfolio-description .icons-ul {
+    flex-direction: row;
   }
 }
