feat: add experiences

--- a/src/components/TopPage/TopPage.scss
+++ b/src/components/TopPage/TopPage.scss
@@ -16,6 +16,40 @@
   flex-direction: row;
 }
 
+#experiences-container {
+  .experience {
+    margin-top: 36px;
+  }
+  .experience-headline {
+    display: flex;
+    align-items: baseline;
+    gap: 24px;
+    p {
+      margin: 0;
+    }
+  }
+  h3 { 
+    margin: 0;
+  }
+  .company-name {
+    font-size: 20px;
+    font-weight: bold;
+    margin-top: 4px;
+    color: gray;
+  }
+  .job-contents {
+    list-style: disc;
+    padding: initial;
+    margin: initial;
+    margin-block-start: 0.5em;
+    margin-block-end: 0.5em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    padding-inline-start: 20px;
+    line-height: 28px;
+  }
+}
+
 #skill-sets ul, #my-values ul, #privateProjects ul {
   display: flex;
 }
@@ -64,6 +98,13 @@
     gap: 0px;
     flex-direction: column-reverse;
     align-items: flex-start;
+  }
+
+  #experiences-container {
+    .experience-headline {
+      gap: 12px;
+      flex-direction: column;
+    }
   }
 
   #skill-sets ul, #my-values ul, #privateProjects ul {
