--- a/src/components/TopPage/TopPage.scss
+++ b/src/components/TopPage/TopPage.scss
@@ -37,17 +37,6 @@
     margin-top: 4px;
     color: gray;
   }
-  .job-contents {
-    list-style: disc;
-    padding: initial;
-    margin: initial;
-    margin-block-start: 0.5em;
-    margin-block-end: 0.5em;
-    margin-inline-start: 0px;
-    margin-inline-end: 0px;
-    padding-inline-start: 20px;
-    line-height: 28px;
-  }
 }
 
 #skill-sets ul, #my-values ul, #privateProjects ul {
@@ -60,14 +49,16 @@
   margin: 2% 2% 2% 0%;
 }
 
-.app-big-icon svg {
-  width: 40px;
-  height: 40px;
-}
+#my-values {
+  .hstack {
+    align-items: baseline;
+  }
 
-#my-values .three-elements {
-  width: 30%;
-  margin: 3% 3% 3% 0;
+  svg {
+    margin-right: 8px;
+    position: relative;
+    top: 3px;
+  }
 }
 
 #privateProjects {
@@ -134,5 +125,11 @@
 
   #privateProjects .privateProject-container {
     width: 100%;
+  }
+
+  #my-values {
+    .w-50 {
+      width: 100% !important
+    }
   }
 }
